--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -2,21 +2,24 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
-    <title>Class 01{% block title %} {% endblock %}</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="{% static 'img/logo.icon1.png' %}" type="image/x-icon">
+    
+    <title>Class 01{% block title %} {% endblock %}</title>
+    
     {% tailwind_css %}
+    
+    <link rel="shortcut icon" href="{% static 'img/logo.icon1.png' %}" type="image/x-icon">
   </head>
 
 <body class="leading-normal tracking-normal text-white bg-slate-800 font-poppins">
     
-<nav class="sticky top-0 z-20 w-full bg-white border-b border-gray-200 dark:bg-gray-900 start-0 dark:border-gray-600">
+<nav class="sticky top-0 z-20 w-full border-b border-gray-600 bg-gray-50 dark:bg-gray-900 start-0">
   <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
   <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img src={% static 'img/logo.png' %} class="h-10" alt="Flowbite Logo">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
+      <span class="self-center text-2xl font-semibold text-gray-900 whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
   </a>
   <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
     {% if request.path == '/' %}  
@@ -32,15 +35,18 @@
     </button>
   </div>
   <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-    <ul class="flex flex-col p-4 mt-4 font-medium border border-gray-100 rounded-lg md:p-0 bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+    <ul class="flex flex-col p-4 mt-4 font-medium border border-gray-100 rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
       <li>
-        <a href="/#section1" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
+        <a href="/#section1" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 ">Home</a>
       </li>
       <li>
-        <a href="/#section2" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Topics</a>
+        <a href="/#section2" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 ">Topics</a>
       </li>
       <li>
-        <a href="/#section3" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+        <a href="/#section3" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 ">Contact</a>
+      </li>
+      <li>
+        <a href="/#section4" class="block px-3 py-2 text-gray-900 rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 ">About</a>
       </li>
     </ul>
   </div>
@@ -62,6 +68,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
 <script src="{% static 'js/script.js' %}"></script>
+
+<div vw class="enabled">
+  <div vw-access-button class="active"></div>
+  <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+  </div>
+</div>
+
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>new window.VLibras.Widget('https://vlibras.gov.br/app');</script>
+
 
 
 </body>
