--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -2,53 +2,56 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
-    <title>Class 01{% block title %} {% endblock %}</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="{% static 'img/logo.icon1.png' %}" type="image/x-icon">
+    
+    <title>Class 01{% block title %} {% endblock %}</title>
+    
     {% tailwind_css %}
+    
+    <link rel="shortcut icon" href="{% static 'img/logo.icon1.png' %}" type="image/x-icon">
   </head>
 
 <body class="leading-normal tracking-normal text-white bg-slate-800 font-poppins">
     
-<nav class="sticky top-0 z-20 w-full bg-gray-900 border-b border-gray-600 start-0">
-  <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
-  <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src={% static 'img/logo.png' %} class="h-10" alt="Flowbite Logo">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
-  </a>
-  <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
-    {% if request.path == '/' %}  
-      <a href="{% url 'exibir_topico' 1 %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Comece agora</button></a>
-    {% elif next_topic %}
-      <a href="{% url 'exibir_topico' next_topic.id %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Próximo tópico</button></a>
-    {% endif %}
-      <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-    </button>
-  </div>
-  <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-    <ul class="flex flex-col p-4 mt-4 font-medium border rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-      <li>
-        <a href="/#section1" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
-      </li>
-      <li>
-        <a href="/#section2" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Topics</a>
-      </li>
-      <li>
-        <a href="/#section3" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
-      </li>
-      <li>
-        <a href="/#section4" class="block px-3 py-2 text-gray-900 rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
-      </li>
-    </ul>
-  </div>
-  </div>
-</nav>
+  <nav class="sticky top-0 z-20 w-full bg-gray-900 border-b border-gray-600 start-0">
+    <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src={% static 'img/logo.png' %} class="h-10" alt="Flowbite Logo">
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
+    </a>
+    <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
+      {% if request.path == '/' %}  
+        <a href="{% url 'exibir_topico' 1 %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Comece agora</button></a>
+      {% elif next_topic %}
+        <a href="{% url 'exibir_topico' next_topic.id %}"><button type="button" class="px-4 py-2 text-sm font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Próximo tópico</button></a>
+      {% endif %}
+        <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center justify-center w-10 h-10 p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+          </svg>
+      </button>
+    </div>
+    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+      <ul class="flex flex-col p-4 mt-4 font-medium border rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <li>
+          <a href="/#section1" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
+        </li>
+        <li>
+          <a href="/#section2" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Topics</a>
+        </li>
+        <li>
+          <a href="/#section3" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+        </li>
+        <li>
+          <a href="/#section4" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+        </li>
+      </ul>
+    </div>
+    </div>
+  </nav>
 
 <main>{% block content %} {% endblock %}</main>
 
@@ -64,7 +67,23 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
-<script src="{% static 'js/script.js' %}"></script>
+<script src="https://unpkg.com/htmx.org@2.0.2"></script>
+
+<script src="{% static 'js/highlight.js' %}"></script>
+<script src="{% static 'js/animation.js' %}"></script>
+
+<div vw class="enabled">
+  <div vw-access-button class="active"></div>
+  <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+  </div>
+</div>
+
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>new window.VLibras.Widget('https://vlibras.gov.br/app');</script>
+
+
+
 
 
 </body>
