--- a/class01/home/templates/home.html
+++ b/class01/home/templates/home.html
@@ -17,11 +17,17 @@
 
                 <div class="flex xs:flex-row">
                     <a href="{% url 'exibir_topico' 1 %}">
-                        <button type="submit" class="px-5 py-3 mt-6 ml-10 text-base font-medium text-center text-blue-700 transition duration-300 bg-white rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-white dark:hover:bg-blue-700 dark:hover:text-white dark:focus:ring-blue-800">Comece agora</button>
+                        <button type="submit" class="flex flex-row px-5 py-3 mt-6 ml-10 text-base font-medium text-center text-blue-700 transition duration-300 bg-white rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-white dark:hover:bg-blue-700 dark:hover:text-white dark:focus:ring-blue-800">Comece agora <span class="my-auto ml-2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.042 21.672 13.684 16.6m0 0-2.51 2.225.569-9.47 5.227 7.917-3.286-.672ZM12 2.25V4.5m5.834.166-1.591 1.591M20.25 10.5H18M7.757 14.743l-1.59 1.59M6 10.5H3.75m4.007-4.243-1.59-1.59" />
+                          </svg>
+                          </span></button>
                     </a>
 
                     <a href="#section3">
-                        <button type="submit" class="px-5 py-3 mt-6 ml-6 text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Fale conosco</button>
+                        <button type="submit" class="flex flex-row px-5 py-3 mt-6 ml-6 text-base font-medium text-center text-white transition duration-300 bg-blue-700 rounded-lg hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-700 dark:hover:bg-white dark:hover:text-blue-700 dark:focus:ring-blue-800">Fale conosco <span class="my-auto ml-2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 13.5h3.86a2.25 2.25 0 0 1 2.012 1.244l.256.512a2.25 2.25 0 0 0 2.013 1.244h3.218a2.25 2.25 0 0 0 2.013-1.244l.256-.512a2.25 2.25 0 0 1 2.013-1.244h3.859m-19.5.338V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 0 0-2.15-1.588H6.911a2.25 2.25 0 0 0-2.15 1.588L2.35 13.177a2.25 2.25 0 0 0-.1.661Z" />
+                          </svg>
+                          </span></button>
                     </a>
                 </div>
             </div>
@@ -113,9 +119,6 @@
                                         {% csrf_token %}
                                         <h3 class="mb-10 text-2xl font-bold text-white">Envie uma mensagem</h3>
                                         <div class="mb-4 text-gray-800">
-                                            <!-- <label for="{{ form.nome.id_for_label }}" class="block text-sm font-medium text-gray-200">
-                                                Nome
-                                            </label> -->
                                             {{ form.nome }}
                                             {% if form.nome.errors %}
                                                 <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
@@ -124,9 +127,6 @@
                                             {% endif %}
                                         </div>
                                         <div class="mb-4 text-gray-800">
-                                            <!-- <label for="{{ form.email.id_for_label }}" class="block text-sm font-medium text-gray-200">
-                                                Email
-                                            </label> -->
                                             {{ form.email }}
                                             {% if form.email.errors %}
                                                 <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
@@ -135,9 +135,6 @@
                                             {% endif %}
                                         </div>
                                         <div class="mb-4 text-gray-800">
-                                            <!-- <label for="{{ form.assunto.id_for_label }}" class="block text-sm font-medium text-gray-200">
-                                                Assunto
-                                            </label> -->
                                             {{ form.assunto }}
                                             {% if form.assunto.errors %}
                                                 <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
@@ -146,9 +143,6 @@
                                             {% endif %}
                                         </div>
                                         <div class="mb-4 text-gray-800">
-                                            <!-- <label for="{{ form.mensagem.id_for_label }}" class="block text-sm font-medium text-gray-200">
-                                                Mensagem
-                                            </label> -->
                                             {{ form.mensagem }}
                                             {% if form.mensagem.errors %}
                                                 <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
@@ -156,10 +150,6 @@
                                                 </div>
                                             {% endif %}
                                         </div>
-                                        <!-- <div class="flex mb-10">
-                                            <input type="checkbox" name="check" id="check">
-                                            <p class="max-w-xs pl-4 text-sm text-gray-300">Ao aceitar, você concorda com nossos Termos, Política de Dados e Cookies</p>
-                                        </div> -->
                                         <button type="submit" class="flex px-12 py-4 mx-auto font-bold text-white transition bg-blue-700 rounded-full hover:bg-white hover:text-blue-700 durantion-300">Enviar mensagem</button>
                                     </form>
                                 </div>
