--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -15,11 +15,11 @@
 
 <body class="leading-normal tracking-normal text-white bg-slate-800 font-poppins">
     
-  <nav class="sticky top-0 z-20 w-full bg-gray-900 border-b border-gray-600 start-0">
+  <nav class="sticky top-0 z-20 w-full border-b border-gray-600 bg-gray-50 start-0">
     <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src={% static 'img/logo.png' %} class="h-10" alt="Flowbite Logo">
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
+        <span class="self-center text-2xl font-semibold text-gray-900 whitespace-nowrap dark:text-white">Class<span class="text-blue-600">01</span></span>
     </a>
     <div class="flex space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse">
       {% if request.path == '/' or request.path == '/all-topics/' %}  
@@ -37,16 +37,16 @@
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
       <ul class="flex flex-col p-4 mt-4 font-medium border rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a href="/#section1" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
+          <a href="/#section1" class="block px-3 py-2 text-black rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
         </li>
         <li>
-          <a href="/#section2" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Topics</a>
+          <a href="/#section2" class="block px-3 py-2 text-black rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Topics</a>
         </li>
         <li>
-          <a href="/#section3" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+          <a href="/#section3" class="block px-3 py-2 text-black rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
         </li>
         <li>
-          <a href="/#section4" class="block px-3 py-2 text-white rounded nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+          <a href="/#section4" class="block px-3 py-2 text-black rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">About</a>
         </li>
       </ul>
     </div>
