--- a/class01/class01/templates/base.html
+++ b/class01/class01/templates/base.html
@@ -13,9 +13,9 @@
     <link rel="shortcut icon" href="{% static 'img/logo.icon1.png' %}" type="image/x-icon">
   </head>
 
-<body class="leading-normal tracking-normal text-white bg-slate-800 font-poppins">
+<body class="leading-normal tracking-normal text-white bg-slate-50 dark:bg-slate-800 font-poppins">
     
-  <nav class="sticky top-0 z-20 w-full border-b border-gray-600 bg-gray-50 start-0">
+  <nav class="sticky top-0 z-20 w-full border-b border-gray-600 bg-gray-50 dark:bg-gray-900 start-0">
     <div class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto">
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src={% static 'img/logo.png' %} class="h-10" alt="Flowbite Logo">
@@ -35,7 +35,7 @@
       </button>
     </div>
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-      <ul class="flex flex-col p-4 mt-4 font-medium border rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+      <ul class="flex flex-col p-4 mt-4 font-medium border rounded-lg md:p-0 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 dark:border-gray-700">
         <li>
           <a href="/#section1" class="block px-3 py-2 text-black rounded dark:text-white nav-link hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-600 md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
         </li>
